Make SDK compatible with java21 (#88)
* Commiting changes for upgrading sdk compatible to java 21.

* Commiting build.gradle related changes for upgrading sdk compatible to java 21.

* commiting changes for source compatibility to java17

* Adding minor changes for Java 21 support

* Handle null check for environment variable

* Update CHANGELOG

---------

Co-authored-by: sushama anilghadage <sushama.anilghadage@fisglobal.com>
Co-authored-by: Vinod Mishra <Vinod.Mishra@fisglobal.com>